--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
+
     <title>cv</title>
 </head>
 
 <body>
     <div class="top-image_block">
         <div class="personal-info">
-            <h2 class="person-name">aaaaa</h2>
+            <h2 id="person-name"></h2>
+            <h4>Front end developer</h4>
+            <ul class="social-media_list">
+                <li><a href="https://www.facebook.com/anya.kosyan.1"><i class="fa fa-facebook-f"></i></a></li>
+                <li><a href="https://www.facebook.com/anya.kosyan.1"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/anya.kosyan.1"><i class="fa fa-linkedin"></i></a></li>
+            </ul>
         </div>
     </div>
     <script src="main.js"></script>
